src/antlr/javaParser.java
// Generated from .\java.g4 by ANTLR 4.10.1

    package antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class javaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, KW_ABSTRACT=3, KW_BOOLEAN=4, KW_CLASS=5, KW_CASE=6, KW_CHAR=7, 
		KW_DO=8, KW_ELSE=9, KW_EXTENDS=10, KW_FLOAT=11, KW_IF=12, KW_IMPLEMENTS=13, 
		KW_IMPORT=14, KW_INT=15, KW_NEW=16, KW_PRIVATE=17, KW_PROTECTED=18, KW_PUBLIC=19, 
		KW_RETURN=20, KW_SHORT=21, KW_VOID=22, KW_WHILE=23, LIT_INT=24, LIT_FLOAT=25, 
		LIT_CHAR=26, LIT_STR=27, LIT_BOOL=28, LIT_NULL=29, SEP_SQBL=30, SEP_SQBR=31, 
		SEP_PARL=32, SEP_PARR=33, SEP_CUBL=34, SEP_CUBR=35, SEP_ASS=36, SEP_SEM=37, 
		OP_ARITHM_MUL=38, OP_ARITHM_ADD=39, OP_UNARY=40, OP_ASSIGN=41, OP_REL=42, 
		OP_LOG=43, OP_BITWISE=44, OP_SHIFT=45, COMMENT=46, WS=47, ID=48;
	public static final int
		RULE_prog = 0, RULE_imps = 1, RULE_fpac = 2, RULE_clss = 3, RULE_classDef = 4, 
		RULE_cls_head = 5, RULE_cls_body = 6, RULE_var_def = 7, RULE_expr = 8, 
		RULE_mth = 9, RULE_mth_head = 10, RULE_sarg = 11, RULE_marg = 12, RULE_blck = 13, 
		RULE_ln = 14, RULE_ret_stat = 15, RULE_stat = 16, RULE_asgn = 17, RULE_funcCall = 18, 
		RULE_objCreationCall = 19, RULE_objFuncCall = 20, RULE_nthFuncCall = 21, 
		RULE_ifStat = 22, RULE_elseIfStat = 23, RULE_elseStat = 24, RULE_whileStat = 25, 
		RULE_doWhileStatement = 26, RULE_type = 27, RULE_lit = 28, RULE_access_mod = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "imps", "fpac", "clss", "classDef", "cls_head", "cls_body", "var_def", 
			"expr", "mth", "mth_head", "sarg", "marg", "blck", "ln", "ret_stat", 
			"stat", "asgn", "funcCall", "objCreationCall", "objFuncCall", "nthFuncCall", 
			"ifStat", "elseIfStat", "elseStat", "whileStat", "doWhileStatement", 
			"type", "lit", "access_mod"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "','", "'abstract'", "'boolean'", "'class'", "'case'", "'char'", 
			"'do'", "'else'", "'extends'", "'float'", "'if'", "'implements'", "'import'", 
			"'int'", "'new'", "'private'", "'protected'", "'public'", "'return'", 
			"'short'", "'void'", "'while'", null, null, null, null, null, "'null'", 
			"'['", "']'", "'('", "')'", "'{'", "'}'", "'='", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "KW_ABSTRACT", "KW_BOOLEAN", "KW_CLASS", "KW_CASE", 
			"KW_CHAR", "KW_DO", "KW_ELSE", "KW_EXTENDS", "KW_FLOAT", "KW_IF", "KW_IMPLEMENTS", 
			"KW_IMPORT", "KW_INT", "KW_NEW", "KW_PRIVATE", "KW_PROTECTED", "KW_PUBLIC", 
			"KW_RETURN", "KW_SHORT", "KW_VOID", "KW_WHILE", "LIT_INT", "LIT_FLOAT", 
			"LIT_CHAR", "LIT_STR", "LIT_BOOL", "LIT_NULL", "SEP_SQBL", "SEP_SQBR", 
			"SEP_PARL", "SEP_PARR", "SEP_CUBL", "SEP_CUBR", "SEP_ASS", "SEP_SEM", 
			"OP_ARITHM_MUL", "OP_ARITHM_ADD", "OP_UNARY", "OP_ASSIGN", "OP_REL", 
			"OP_LOG", "OP_BITWISE", "OP_SHIFT", "COMMENT", "WS", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public javaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	 
		public ProgContext() { }
		public void copyFrom(ProgContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ProgramContext extends ProgContext {
		public ImpsContext imps() {
			return getRuleContext(ImpsContext.class,0);
		}
		public ClssContext clss() {
			return getRuleContext(ClssContext.class,0);
		}
		public ProgramContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof javaVisitor ) return ((javaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			_localctx = new ProgramContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			imps();
			setState(61);
			clss();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImpsContext extends ParserRuleContext {
		public ImpsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imps; }
	 
		public ImpsContext() { }
		public void copyFrom(ImpsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImportsContext extends ImpsContext {
		public List<TerminalNode> KW_IMPORT() { return getTokens(javaParser.KW_IMPORT); }
		public TerminalNode KW_IMPORT(int i) {
			return getToken(javaParser.KW_IMPORT, i);
		}
		public List<FpacContext> fpac() {
			return getRuleContexts(FpacContext.class);
		}
		public FpacContext fpac(int i) {
			return getRuleContext(FpacContext.class,i);
		}
		public List<TerminalNode> SEP_SEM() { return getTokens(javaParser.SEP_SEM); }
		public TerminalNode SEP_SEM(int i) {
			return getToken(javaParser.SEP_SEM, i);
		}
		public ImportsContext(ImpsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).enterImports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).exitImports(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof javaVisitor ) return ((javaVisitor<? extends T>)visitor).visitImports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImpsContext imps() throws RecognitionException {
		ImpsContext _localctx = new ImpsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_imps);
		int _la;
		try {
			_localctx = new ImportsContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KW_IMPORT) {
				{
				{
				setState(63);
				match(KW_IMPORT);
				setState(64);
				fpac();
				setState(65);
				match(SEP_SEM);
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FpacContext extends ParserRuleContext {
		public FpacContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fpac; }
	 
		public FpacContext() { }
		public void copyFrom(FpacContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Full_packageContext extends FpacContext {
		public List<TerminalNode> ID() { return getTokens(javaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(javaParser.ID, i);
		}
		public Full_packageContext(FpacContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).enterFull_package(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).exitFull_package(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof javaVisitor ) return ((javaVisitor<? extends T>)visitor).visitFull_package(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FpacContext fpac() throws RecognitionException {
		FpacContext _localctx = new FpacContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fpac);
		int _la;
		try {
			_localctx = new Full_packageContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(ID);
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(73);
				match(T__0);
				setState(74);
				match(ID);
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClssContext extends ParserRuleContext {
		public ClssContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clss; }
	 
		public ClssContext() { }
		public void copyFrom(ClssContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ClassesContext extends ClssContext {
		public List<ClassDefContext> classDef() {
			return getRuleContexts(ClassDefContext.class);
		}
		public ClassDefContext classDef(int i) {
			return getRuleContext(ClassDefContext.class,i);
		}
		public ClassesContext(ClssContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).enterClasses(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).exitClasses(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof javaVisitor ) return ((javaVisitor<? extends T>)visitor).visitClasses(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClssContext clss() throws RecognitionException {
		ClssContext _localctx = new ClssContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_clss);
		int _la;
		try {
			_localctx = new ClassesContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(81); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(80);
				classDef();
				}
				}
				setState(83); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_ABSTRACT) | (1L << KW_CLASS) | (1L << KW_PUBLIC))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDefContext extends ParserRuleContext {
		public ClassDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDef; }
	 
		public ClassDefContext() { }
		public void copyFrom(ClassDefContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Class_definitionContext extends ClassDefContext {
		public Cls_headContext cls_head() {
			return getRuleContext(Cls_headContext.class,0);
		}
		public TerminalNode SEP_CUBL() { return getToken(javaParser.SEP_CUBL, 0); }
		public Cls_bodyContext cls_body() {
			return getRuleContext(Cls_bodyContext.class,0);
		}
		public TerminalNode SEP_CUBR() { return getToken(javaParser.SEP_CUBR, 0); }
		public Class_definitionContext(ClassDefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).enterClass_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).exitClass_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof javaVisitor ) return ((javaVisitor<? extends T>)visitor).visitClass_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDefContext classDef() throws RecognitionException {
		ClassDefContext _localctx = new ClassDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classDef);
		try {
			_localctx = new Class_definitionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			cls_head();
			setState(86);
			match(SEP_CUBL);
			setState(87);
			cls_body();
			setState(88);
			match(SEP_CUBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cls_headContext extends ParserRuleContext {
		public Cls_headContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cls_head; }
	 
		public Cls_headContext() { }
		public void copyFrom(Cls_headContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Class_headerContext extends Cls_headContext {
		public TerminalNode KW_CLASS() { return getToken(javaParser.KW_CLASS, 0); }
		public List<TerminalNode> ID() { return getTokens(javaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(javaParser.ID, i);
		}
		public TerminalNode KW_PUBLIC() { return getToken(javaParser.KW_PUBLIC, 0); }
		public TerminalNode KW_ABSTRACT() { return getToken(javaParser.KW_ABSTRACT, 0); }
		public TerminalNode KW_EXTENDS() { return getToken(javaParser.KW_EXTENDS, 0); }
		public List<TerminalNode> KW_IMPLEMENTS() { return getTokens(javaParser.KW_IMPLEMENTS); }
		public TerminalNode KW_IMPLEMENTS(int i) {
			return getToken(javaParser.KW_IMPLEMENTS, i);
		}
		public Class_headerContext(Cls_headContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).enterClass_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).exitClass_header(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof javaVisitor ) return ((javaVisitor<? extends T>)visitor).visitClass_header(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cls_headContext cls_head() throws RecognitionException {
		Cls_headContext _localctx = new Cls_headContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cls_head);
		int _la;
		try {
			_localctx = new Class_headerContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_PUBLIC) {
				{
				setState(90);
				match(KW_PUBLIC);
				}
			}

			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_ABSTRACT) {
				{
				setState(93);
				match(KW_ABSTRACT);
				}
			}

			setState(96);
			match(KW_CLASS);
			setState(97);
			match(ID);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_EXTENDS) {
				{
				setState(98);
				match(KW_EXTENDS);
				setState(99);
				match(ID);
				}
			}

			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KW_IMPLEMENTS) {
				{
				{
				setState(102);
				match(KW_IMPLEMENTS);
				setState(103);
				match(ID);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cls_bodyContext extends ParserRuleContext {
		public Cls_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cls_body; }
	 
		public Cls_bodyContext() { }
		public void copyFrom(Cls_bodyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Class_bodyContext extends Cls_bodyContext {
		public List<Var_defContext> var_def() {
			return getRuleContexts(Var_defContext.class);
		}
		public Var_defContext var_def(int i) {
			return getRuleContext(Var_defContext.class,i);
		}
		public List<MthContext> mth() {
			return getRuleContexts(MthContext.class);
		}
		public MthContext mth(int i) {
			return getRuleContext(MthContext.class,i);
		}
		public List<ClassDefContext> classDef() {
			return getRuleContexts(ClassDefContext.class);
		}
		public ClassDefContext classDef(int i) {
			return getRuleContext(ClassDefContext.class,i);
		}
		public Class_bodyContext(Cls_bodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).enterClass_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).exitClass_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof javaVisitor ) return ((javaVisitor<? extends T>)visitor).visitClass_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cls_bodyContext cls_body() throws RecognitionException {
		Cls_bodyContext _localctx = new Cls_bodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cls_body);
		int _la;
		try {
			_localctx = new Class_bodyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_ABSTRACT) | (1L << KW_BOOLEAN) | (1L << KW_CLASS) | (1L << KW_CHAR) | (1L << KW_FLOAT) | (1L << KW_INT) | (1L << KW_PRIVATE) | (1L << KW_PROTECTED) | (1L << KW_PUBLIC) | (1L << KW_VOID) | (1L << ID))) != 0)) {
				{
				setState(112);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(109);
					var_def();
					}
					break;
				case 2:
					{
					setState(110);
					mth();
					}
					break;
				case 3:
					{
					setState(111);
					classDef();
					}
					break;
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_defContext extends ParserRuleContext {
		public Var_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_def; }
	 
		public Var_defContext() { }
		public void copyFrom(Var_defContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Variable_definitionContext extends Var_defContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(javaParser.ID, 0); }
		public TerminalNode SEP_SEM() { return getToken(javaParser.SEP_SEM, 0); }
		public Access_modContext access_mod() {
			return getRuleContext(Access_modContext.class,0);
		}
		public TerminalNode SEP_ASS() { return getToken(javaParser.SEP_ASS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Variable_definitionContext(Var_defContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).enterVariable_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).exitVariable_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof javaVisitor ) return ((javaVisitor<? extends T>)visitor).visitVariable_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_defContext var_def() throws RecognitionException {
		Var_defContext _localctx = new Var_defContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_var_def);
		int _la;
		try {
			_localctx = new Variable_definitionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_PRIVATE) | (1L << KW_PROTECTED) | (1L << KW_PUBLIC))) != 0)) {
				{
				setState(117);
				access_mod();
				}
			}

			setState(120);
			type();
			setState(121);
			match(ID);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEP_ASS) {
				{
				setState(122);
				match(SEP_ASS);
				setState(123);
				expr(0);
				}
			}

			setState(126);
			match(SEP_SEM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
